# spline_read

./: CMakeLists.txt  LICENSE  README.md  demo.cc
include/: splineread.hh
src/: splineread.cc
